--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="item">
             <h1 >Pizzaria Veneza</h1>
-            <p class="slogan">Sua melhor opção em pizzas saborosas!</p>
+            <p class="slogan">Sua melhor opção em pizzas!</p>
         </div>
             
             <div class="item">
